--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.mt</groupId>
 	<artifactId>tesla-test</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.1</version>
+	<version>0.0.3-SNAPSHOT</version>
 	
 	<name>tesla-test</name>
 
